<resources>
  <string name="app_name">c4qpassionproject</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="home">Home</string>
  <string name="your_orders">Your Orders</string>
  <string name="recipes">Recipes</string>
  <string name="meal_plan">Meal Plan</string>
  <string name="your_pantry">Your Pantry</string>
  <string name="contact_us">Contact Us</string>
  <string name="profile">Profile</string>
  <string name="recipe_content_description">Food</string>
  <string name="category_rec_instructions">Instructions</string>
  <string name="category_rec_ingredients">Ingredients</string>

</resources>
