<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/recipes"/>
    <item
        android:id="@+id/nav_food_map"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/meal_plan"/>
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/your_orders"/>
    <item
        android:id="@+id/nav_pantry"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/your_pantry"/>
    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/contact_us"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/profile"/>
  </group>


</menu>
